--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,25 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+   - title: "CV"
+     url: /cv/
+     
+   - title: "Publications"
+     url: /publications/
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+   - title: "Talks"
+     url: /talks/
+
+   - title: "Teaching"
+     url: /teaching/
+
+  # - title: "Portfolio"
+  #   url: /portfolio/
+
+   - title: "Blog & News"
+     url: /year-archive/
+
+
+
+  # - title: "Guide"
+  #   url: /markdown/
