--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Liang Cao"
 title_separator          : "-"
 name                     : &name "Liang Cao"
 description              : &description "I am Liang Cao, a PhD student from UBC"
-url                      : "https://liangcao2018.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://Liangcao2018.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Liangcao2018/Liangcao2018.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
