--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 plugins:
   - jekyll-remote-theme
 remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "defaults" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 # Site Settings
 locale                   : "en-US"
 title                    : "Liang Cao"
 title_separator          : "-"
 name                     : &name "Liang Cao"
-description              : &description "I am Liang Cao, a PhD student from UBC"
+description              : &description "Liang Cao UBC"
 url                      : "https://Liangcao2018.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Liangcao2018/Liangcao2018.github.io"
