--- a/_data/education.yaml
+++ b/_data/education.yaml
@@ -4,7 +4,7 @@
   degree_full: "Bachelor of Science"
   institution: "Beijing University of Chemical Technology"
   inst_short: "BUCT"
-  subject: "Enginering"
+  subject: "Automation"
   year: "2011"
   year_end: "2015"
   advisors:
